<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="13"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_weight="0.988"
            android:layout_width="wrap_content"
            android:layout_height="0dp"> </LinearLayout>

        <LinearLayout
            android:layout_weight="2.544"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_weight="0.354"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></LinearLayout>

                <LinearLayout
                    android:layout_weight="2.292"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:layout_height="match_parent"
                        android:layout_width="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@drawable/setlogo" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:weightSum="3">

                            <LinearLayout
                                android:layout_weight="1.4"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"></LinearLayout>

                            <LinearLayout
                                android:layout_weight="1.5"
                                android:layout_width="match_parent"
                                android:layout_height="0dp">

                                <TextView
                                    android:id="@+id/setlogo"
                                    android:gravity="center"
                                    android:textColor="#FFF"
                                    android:textStyle="bold"
                                    android:textSize="20sp"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/settings" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_weight="0.1"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"></LinearLayout>

                        </LinearLayout>

                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="0.354"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.7"
            android:layout_width="wrap_content"
            android:layout_height="0dp"></LinearLayout>

        <LinearLayout
            android:layout_weight="0.91"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="5">

                <LinearLayout
                    android:layout_weight="0.34"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></LinearLayout>

                <LinearLayout
                    android:layout_weight="2.0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/sndt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/sound"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:textColor="#fff"
                        android:background="@drawable/bgtext" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="0.32"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></LinearLayout>

                <LinearLayout
                    android:layout_weight="2.0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <SeekBar
                        android:id="@+id/soundSlider"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="0.34"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="0dp"></LinearLayout>

        <LinearLayout
            android:layout_weight="0.91"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="5">

                <LinearLayout
                    android:layout_weight="0.34"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></LinearLayout>

                <LinearLayout
                    android:layout_weight="2.0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/msct"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/music"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:background="@drawable/bgtext" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="0.32"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></LinearLayout>

                <LinearLayout
                    android:layout_weight="2.0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <SeekBar
                        android:id="@+id/musicSlider"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="0.34"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="0dp"></LinearLayout>

        <LinearLayout
            android:layout_weight="0.91"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="5">

                <LinearLayout
                    android:layout_weight="0.34"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></LinearLayout>

                <LinearLayout
                    android:layout_weight="2.0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tmrt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/time"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:background="@drawable/bgtext" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="0.32"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></LinearLayout>

                <LinearLayout
                    android:layout_weight="2.0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <SeekBar
                        android:id="@+id/timeSlider"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="0.34"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="0dp"></LinearLayout>

        <LinearLayout
            android:layout_weight="0.91"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="5">

                <LinearLayout
                    android:layout_weight="0.34"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></LinearLayout>

                <LinearLayout
                    android:layout_weight="2.0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/dfqt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/difficult"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#fff"
                        android:background="@drawable/bgtext" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="0.32"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></LinearLayout>

                <LinearLayout
                    android:layout_weight="2.0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#fff"
                        android:gravity="center"
                        android:background="@drawable/bgtext"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="0.34"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.7"
            android:layout_width="match_parent"
            android:layout_height="0dp"></LinearLayout>


        <LinearLayout
            android:layout_weight="2.0"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_weight="1.08"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></LinearLayout>

                <LinearLayout
                    android:layout_weight="0.84"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/bbtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:src="@drawable/backbt" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1.08"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"></LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1.69"
            android:layout_width="wrap_content"
            android:layout_height="0dp"></LinearLayout>

    </LinearLayout>

</RelativeLayout>